# test

./: README.md  pyproject.toml
.github/workflows/: build_and_test.yml
apps/: __init__.py  config.py  db.sqlite3
apps/authentication/: forms.py  models.py  routes.py
apps/smartcamera/: __init__.py  models.py  routes.py
