[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Le Minh Khoi <khoi.le_bk@hcmut.edu.vn>"]

[tool.poetry.dependencies]
python = "3.9.5"
Flask = "^2.1.2"
Flask-Login = "^0.6.1"
Flask-Migrate = "^3.1.0"
WTForms = "^3.0.1"
Flask-WTF = "^1.0.1"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.39"
email-validator = "^1.2.1"
python-decouple = "^3.6"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"
flask-restx = "^0.5.1"
PyJWT = "^2.4.0"
Flask-Cors = "^3.0.10"
numpy = "^1.23.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pep8-naming = "^0.13.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
